Implemented profile page
